[package]
name = "ldr"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ldr"
path = "src/main.rs"

[dependencies]
printf-compat = "0.1.1"
windows = { version = "0.44.0", features = ["Win32_System_LibraryLoader", "Win32_System_Memory", "Win32_Foundation", "Win32_System_Com", "Win32_System_Ole", "Win32_Security", "Win32_System_SystemInformation", "Win32_System_Diagnostics_Debug", "Win32_System_Kernel", "Win32_System_SystemServices", "Win32_System_IO", "Win32_System_WindowsProgramming", "Win32_System_Diagnostics_Debug", "Win32_System_Threading", "Win32_Storage_FileSystem", "Win32_System_Memory"] }